working on bookings model

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,3 +1,5 @@
+<h1> Bookings information </h1>
+
 <h2><%= @booking.name %></h2>
 <p><%= @booking.start_date %></p>
 <p><%= @booking.end_date %></p>
