--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @game do |f| %>
+<%= simple_form_for [@game] do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :category %>
