--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,3 +4,5 @@
 <p><%= @game.age_range %></p>
 <p><%= @game.rating %></p>
 <p><%= @game.manufacturer %></p>
+
+<%= link_to "Go back to games list", games_path %>
