--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,5 +3,12 @@
 <ul>
   <% @games.each do |game| %>
     <li><%= game.name %></li>
+    <p>
+    <%= link_to "Show this game", game%>
+    </p>
   <% end %>
+
+  <h2>
+  <%= link_to "Rent a game !", new_path%>
+  </h2>
 </ul>
