--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,4 +5,4 @@
 <p><%= @game.rating %></p>
 <p><%= @game.manufacturer %></p>
 
-<%= link_to "Go back to games list", games_path %>
+<%= link_to "Go back to games list", games_path, class:"btn btn-primary" %>
