--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -14,3 +14,26 @@ $headers-font: "Nunito", "Helvetica", "sans-serif";
 //        font-url('FontFile.ttf') format('truetype')
 // }
 // $my-font: "Font Name";
+//	font.scss
+// Marmelad Google Font
+// 1 weight: 400
+@import url('https://fonts.googleapis.com/css2?family=Marmelad&display=swap');
+// Biryani Google Font
+// 7 weights: 200, 300, 400, 600, 700, 800, 900
+@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Biryani&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@900&display=swap');
+
+// Uncomment to use .woff
+// @font-face {
+//   font-family: 'Font Name';
+//   src: font-url('FontFile.eot');
+//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
+//        font-url('FontFile.ttf') format('truetype'),
+//        font-url('FontFile.woff') format('woff')
+// }
+// $my-font: 'Font Name';
