--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <h1> Welcome to Wizard Renter </h1>
 <p>Get access to a wide range of games or put yours to rent !</p>
 
-<%= link_to "See our games list", index_path %>
+<%= link_to "See our games list", index_path, class:"btn btn-primary" %>
