--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -11,3 +11,4 @@
   <%= f.number_field :rating %>
   <%= f.submit %>
 <% end %>
+<%= link_to "Go back to games list", games_path, class:"btn btn-primary" %>
