--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,8 +1,29 @@
 <h1> Wizard Renter </h1>
-<h2> Your bookings: </h2>
-
+<h2> Here are our bookings! </h2>
+<h2>
+  <%= link_to "Rent a game !", new_path, class:"btn btn-primary"%>
+  </h2>
+<div class="container">
 <ul>
-  <% @bookings.each do |booking| %>
-    <li><%= booking.name %></li>
+<div class="cards mt-3">
+  <% @booking.each do |b| %>
+    <%= link_to booking_path(booking) do %>
+      <div class="card-trip">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <div class="card-trip-infos">
+          <div>
+            <h2> <%=booking.name%></h2>
+              <p><%=booking.category%></p>
+          </div>
+          <h2 class="card-trip-pricing"><%=booking.category%>$</h2>
+        </div>
+      </div>
+    <% end %>
   <% end %>
+
+  <h2>
+  <%= link_to "Go to Home", root_path, class:"btn btn-primary"%>
+  </h2>
+</div>
 </ul>
+</div>
