--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,3 +6,4 @@
 <p><%= @game.manufacturer %></p>
 
 <%= link_to "Go back to games list", games_path, class:"btn btn-primary" %>
+<%= link_to "Rent this game !",  new_game_booking_path(@game), class:"btn btn-success" %>
