--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -5,3 +5,4 @@
 
 
 <%= link_to "Go back to games list", games_path, class:"btn btn-primary" %>
+<%= link_to "See all my bookings", bookings_path, class:"btn btn-primary" %>
