--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -9,6 +9,8 @@
   <%= f.number_field :age_range %>
   <%= f.label :rating %>
   <%= f.number_field :rating %>
+  <%= f.label :image_url %>
+  <%= f.text_field :image_url %>
   <%= f.submit %>
 <% end %>
 <%= link_to "Go back to games list", games_path, class:"btn btn-primary" %>
