--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for [@game, @booking] do |f| %>
 <%= @game.name %>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
+  <%= f.input :start_date, as: :date, html5: :true %>
+  <%= f.input :end_date, as: :date, html5: :true %>
   <%= f.submit %>
 <% end %>
 <%= link_to "Go back to games list", games_path, class:"btn btn-primary" %>
