--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,6 +1,8 @@
 <h1><%= @booking.game.name %></h1>
 <h2> Your selection has been saved ! </h2>
 <h2> The duration of your booking will be from <%= @booking.start_date %> until <%= @booking.end_date %> </h2>
+<h3> Here is your total: $ <%= @total.to_i %> </h3>
+
 <%= image_tag @booking.game.image_url%>
 
 
