--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
         <a href="/games" class="tab-underlined active">Games List</a>
       </li>
       <li>
-        <a href="/games/new" class="tab-underlined">List your Game</a>
+        <a href="/games/new" class="tab-underlined active">List your Game</a>
       </li>
     </ul>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
