--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,104 @@
 // Specific CSS for your home-page
+.background {
+background-color: rgb(0, 0, 0);
+}
+
+.banner {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+  box-shadow: 4px, 4px, 12px white;
+}
+
+.banner-img {
+  height: fit-content;
+}
+
+body {
+  background-color: rgba(190, 45, 161, 0.4);
+}
+
+.banner h1 {
+  margin: 0;
+  color: rgb(255, 255, 255);
+  text-shadow: 4px 4px 12px rgba(255, 255, 255, 0.839);
+  font-size: 54px;
+  font-weight: bold;
+  font-family: philosopher;
+  text-align: center;
+}
+
+.banner h2 {
+  margin: 0;
+  color: white;
+  text-shadow: 3px 3px 9px rgba(255, 255, 255, 0.839);
+  font-size: 45px;
+  font-weight: bold;
+  font-family: philosopher;
+  text-align: center;
+}
+
+.banner p {
+  font-size: 32px;
+  color: rgba(190, 105, 169, 0.926);
+  text-shadow: 4px 4px 12px rgb(0, 0, 0);
+  text-align: center;
+}
+
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+.rainbowbutton {
+  animation: 1.5s ease infinite alternate running shimmer;
+  background: linear-gradient(90deg, #FFE27D 0%, #64E3FF 30%, #9192FF 85%);
+  background-size: 200% 100%;
+  border: none;
+	border-radius: 6px;
+  box-shadow: -2px -2px 10px rgba(255, 227, 126, 0.5), 2px 2px 10px rgba(144, 148, 255, 0.5);
+  color: #170F1E;
+  cursor: pointer;
+	font-family: 'Inter', sans-serif;
+  font-size: 16px;
+	font-weight: 670;
+  line-height: 24px;
+  overflow: hidden;
+  padding: 12px 24px;
+  position: relative;
+  text-decoration: none;
+  transition: 0.2s;
+  text-align: center;
+
+  svg {
+    left: -20px;
+    opacity: 0.5;
+    position: absolute;
+    top: -2px;
+    transition: 0.5s cubic-bezier(.5,-0.5,.5,1.5);
+  }
+
+  &:hover svg {
+    opacity: 0.8;
+    transform: translateX(50px) scale(1.5);
+  }
+
+  &:hover {
+    transform: rotate(-3deg);
+  }
+
+  &:active {
+    transform: scale(0.95) rotate(-3deg);
+    text-align: center;
+  }
+
+}
+
+@keyframes shimmer {
+  to {
+    background-size: 100% 100%;
+    box-shadow: -2px -2px 6px rgba(255, 227, 126, 0.5), 2px 2px 6px rgba(144, 148, 255, 0.5);
+    text-align: center;
+  }
+}
+
+.buttonshape {
+  margin-left: 45%;
+}
