--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,3 +5,32 @@ a{
   text-decoration: none
 
 }
+
+ h1 {
+  margin: 0;
+  color: rgb(255, 255, 255);
+  text-shadow: 4px 4px 12px rgba(0, 0, 0, 0.341);
+  font-size: 54px;
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+}
+
+body {
+  background-color: rgba(190, 45, 160, 0.4);
+}
+
+.card-trip {
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 4px 10px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.rentform {
+  background-color: white;
+  border-radius: 7px;
+  padding: 30px;
+  width: 30%;
+  margin: 30px auto;
+  box-shadow: 4px 4px 12px black;
+}
