--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,27 +1,61 @@
-<h1> Wizard Renter </h1>
-<h2> Here are the board games available: </h2>
-<h2>
-  <%= link_to "List a game !", new_path, class:"btn btn-primary"%>
-  </h2>
 <div class="container">
-
-<div class="cards mt-3">
-  <% @games.each do |game| %>
-    <%= link_to game_path(game) do %>
-      <div class="card-trip">
-      <%= image_tag game.image_url%>
-        <div class="card-trip-infos">
-          <div>
-            <h2> <%=game.name%></h2>
-              <p><%=game.category%></p>
+  <h1> Our current selection </h1>
+  <div class="cards mt-3">
+    <% @games.each do |game| %>
+      <%= link_to game_path(game) do %>
+        <div class="card-trip">
+          <%= image_tag game.image_url%>
+          <div class="card-trip-infos">
+              <div>
+                <h2> <%=game.name%></h2>
+                  <p><%=game.category%></p>
+              </div>
+              <h2 class="card-trip-pricing"><%=game.price%>$</h2>
           </div>
-          <h2 class="card-trip-pricing"><%=game.price%>$</h2>
         </div>
-      </div>
+      <% end %>
     <% end %>
-  <% end %>
-</div>
-<h2>
-  <%= link_to "Go back to home page", root_path, class:"btn btn-primary"%>
-  </h2>
+  </div>
+
+
+  <div class="d-flex justify-content-around mb-3">
+        <%= link_to new_game_path, class:"rainbowbutton" do%>
+          List a game !
+          <svg width="79" height="46" viewBox="0 0 79 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g filter="url(#filter0_f_618_1123)">
+              <path d="M42.9 2H76.5L34.5 44H2L42.9 2Z" fill="url(#paint0_linear_618_1123)"/>
+            </g>
+            <defs>
+              <filter id="filter0_f_618_1123" x="0" y="0" width="78.5" height="46" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                <feGaussianBlur stdDeviation="1" result="effect1_foregroundBlur_618_1123"/>
+              </filter>
+              <linearGradient id="paint0_linear_618_1123" x1="76.5" y1="2.00002" x2="34.5" y2="44" gradientUnits="userSpaceOnUse">
+                <stop stop-color="white" stop-opacity="0.6"/>
+                <stop offset="1" stop-color="white" stop-opacity="0.05"/>
+              </linearGradient>
+            </defs>
+          </svg>
+        <% end %>
+        <%= link_to root_path, class:"rainbowbutton" do%>
+          Go back to Home Page
+          <svg width="79" height="46" viewBox="0 0 79 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g filter="url(#filter0_f_618_1123)">
+              <path d="M42.9 2H76.5L34.5 44H2L42.9 2Z" fill="url(#paint0_linear_618_1123)"/>
+            </g>
+            <defs>
+              <filter id="filter0_f_618_1123" x="0" y="0" width="78.5" height="46" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                <feGaussianBlur stdDeviation="1" result="effect1_foregroundBlur_618_1123"/>
+              </filter>
+              <linearGradient id="paint0_linear_618_1123" x1="76.5" y1="2.00002" x2="34.5" y2="44" gradientUnits="userSpaceOnUse">
+                <stop stop-color="white" stop-opacity="0.6"/>
+                <stop offset="1" stop-color="white" stop-opacity="0.05"/>
+              </linearGradient>
+            </defs>
+          </svg>
+        <% end %>
+  </div>
 </div>
