--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -32,5 +32,12 @@ body {
   padding: 30px;
   width: 30%;
   margin: 30px auto;
-  box-shadow: 4px 4px 12px black;
+  box-shadow: 4px 4px 12px rgb(174, 173, 173);
+  width: 500px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+.rentform text {
+  margin-bottom: 5px;
 }
