--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -32,7 +32,7 @@
             </defs>
           </svg>
         <% end %>
-        <%= link_to new_game_path, class:"rainbowbutton" do%>
+        <%= link_to new_game_booking_path(@game), class:"rainbowbutton" do%>
           Rent this game !
           <svg width="79" height="46" viewBox="0 0 79 46" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g filter="url(#filter0_f_618_1123)">
