--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,7 +7,6 @@
 .card-trip > img {
   height: 200px;
   width: 100%;
-  object-fit: cover;
 }
 
 .card-trip h2 {
@@ -16,18 +15,36 @@
   margin: 0;
 }
 
+.card-trip-infos h2 {
+  font-size: 11px;
+
+}
 .card-trip p {
   font-size: 12px;
   opacity: .7;
   margin: 0;
 }
 
+.card-body h1 {
+  margin: 0;
+  color: rgb(0, 0, 0);
+  font-size: 54px;
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+}
 
+.container {
+  max-width: 600px;
+}
+.card-body {
+  justify-content: center;
+}
 .card-trip .card-trip-infos {
   padding: 16px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   position: relative;
 }
 
