--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,10 +18,11 @@ body {
   background-color: rgba(190, 45, 161, 0.4);
 }
 
+
 .banner h1 {
   margin: 0;
   color: rgb(255, 255, 255);
-  text-shadow: 4px 4px 12px rgba(255, 255, 255, 0.839);
+  //text-shadow: 2px 2px 8px rgba(255, 255, 255, 0.839);
   font-size: 54px;
   font-weight: bold;
   font-family: philosopher;
@@ -31,11 +32,12 @@ body {
 .banner h2 {
   margin: 0;
   color: white;
-  text-shadow: 3px 3px 9px rgba(255, 255, 255, 0.839);
+  //text-shadow: 3px 3px 9px rgba(255, 255, 255, 0.839);
   font-size: 45px;
   font-weight: bold;
   font-family: philosopher;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .banner p {
