--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -9,7 +9,7 @@ a{
  h1 {
   margin: 0;
   color: rgb(255, 255, 255);
-  text-shadow: 4px 4px 12px rgba(0, 0, 0, 0.341);
+  // text-shadow: 4px 4px 12px rgba(0, 0, 0, 0.341);
   font-size: 54px;
   font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -43,7 +43,7 @@ body {
 }
 
 .img-work {
-  max-width: 250px;
+  max-width: 500px;
   margin: 20px auto;
   border-radius: 7px;
 }
